--- a/de.tud.et.ifa.agtele.eclipse.commons.webpage.generator/templateResources/css/style.css
+++ b/de.tud.et.ifa.agtele.eclipse.commons.webpage.generator/templateResources/css/style.css
@@ -341,3 +341,42 @@ body {
 footer {
 	color:white !important;
 }
+
+
+/***** Carousel *****/
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+	border-radius: 50%;
+	width:40px;
+	height:40px;
+	background: no-repeat 65%/70% 70%;
+	background-color: rgba(0,0,0);
+}
+.carousel-control-next-icon {
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+}
+.carousel-control-prev-icon {
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+}
+
+.carousel-dark .carousel-control-next,
+.carousel-dark .carousel-control-prev{
+	opacity:0.8;
+}
+.carousel-dark .carousel-caption {
+	background-color:rgba(0,0,0,0.6);
+}
+
+.carousel-dark .carousel-indicators li{
+	background-color:rgba(0,0,0,0.7);
+}
+
+.carousel-dark .carousel-indicators li:hover{
+	background-color:rgba(0,0,0,1.0);
+}
+
+.carousel-dark .carousel-indicators li:active,
+.carousel-dark .carousel-indicators li.active{
+	background-color:rgba(0,0,0,1.0);
+}
